@@ -513,7 +513,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories 
 # with spaces.
 
-INPUT                  = ../src-IL/src ../src-IL/include ../src-ILU/src ../src-ILU/include ../src-ILUT/src ../src-ILUT/include
+INPUT                  = ../src-IL/src ../src-IL/include ../src-ILU/src ../src-ILU/include ../src-ILUT/src ../src-ILUT/include ../include/IL
 
 # This tag can be used to specify the character encoding of the source files 
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is 
@@ -643,7 +643,7 @@ STRIP_CODE_COMMENTS    = YES
 # then for each documented function all documented 
 # functions referencing it will be listed.
 
-REFERENCED_BY_RELATION = NO
+REFERENCED_BY_RELATION = YES
 
 # If the REFERENCES_RELATION tag is set to YES 
 # then for each documented function all documented entities 
