@@ -10,6 +10,10 @@
 //
 //-----------------------------------------------------------------------------
 
+// Doxygen comment
+/*! \file il.h
+    The main include file for DevIL
+*/
 
 #ifndef __il_h_
 #ifndef __IL_H__
